# Exploration

./: README.md  environments.txt  hosts.txt
amcl/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
amcl/catkin_generated/: generate_cached_setup.py  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
amcl/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
beginner_tutorials/: CMakeLists.txt
beginner_tutorials/src/: ControlRob.cpp  listener.cpp  merge_occ_grids.cpp  scan2pcl1.cpp  scan2pcl2.cpp  scan2pcl3.cpp  scan2pcl4.cpp  scan2pcl5.cpp  scan2pcl6.cpp  scan2pcl7.cpp  scan2pcl8.cpp
catkin_ws_ite/: ademo.dot  grid.txt  hallway-3d.ot  hallway-obstacle.ot  hallway.ot  mapfile.ot  op.txt  tree_generated.dot
catkin_ws_ite/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws_ite/install/: setup.sh
catkin_ws_ite/install/share/ite_trajopt/: package.xml
catkin_ws_ite/install/share/ite_trajopt/cmake/: ite_trajoptConfig.cmake
catkin_ws_ite/install/share/ite_trajopt/msg/: StatesControls.msg
catkin_ws_ite/install/share/ite_util/: package.xml
catkin_ws_ite/install/share/ite_util/cmake/: ite_utilConfig.cmake
catkin_ws_ite/install/share/octomap_multi/: package.xml
catkin_ws_ite/src/: CMakeLists.txt~
gazebo_launch_files/gazebo_exploration/: CMakeLists.txt
gazebo_launch_files/launch/: pioneer_gazebo_navigation.launch  pioneer_gazebo_navigation.launch~
gazebo_launch_files/p3dx_description/: frames.gv  temp
joy_controller/: CMakeLists.txt
joy_controller/src/: talker.cpp
laser_filter_config/: laser_filter.launch
launch_files/: README.md  gmap_launch.launch  move_base_isr_map.launch  pioneer_bringup.launch
launch_files/launch/: passthrough.launch  scan2pcl.cpp
launch_files/params/: base_local_planner_params.yaml  (+3 more)
maps/: lab_corridor.pgm  lab_corridor.xcf  lab_corridor.yaml  lab_corridor2.pgm  lab_gmapping2.pgm  lab_gmapping2.yaml
my_robot_name_2dnav/: CMakeLists.txt  base_local_planner_params.yaml~  costmap_common_params.yaml  costmap_common_params.yaml~  move_base.launch~  my_robot_configuration.launch~  package.xml
navigation/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
pioneerexploration/: CMakeLists.txt  package.xml
robot_setup_tf/: CMakeLists.txt  package.xml
simple_navigation_goals/: CMakeLists.txt~  package.xml
technologicExploration/: CMakeLists.txt
technologic_navigation/: CMakeLists.txt~  amcl_pioneer.launch  base_local_planner_params.yaml  local_costmap_params.yaml~
(+331 files in other folders)
