<?xml version="1.0"?>
<package>
  <name>ite_trajopt</name>
  <version>0.0.0</version>
  <description>The ite_trajopt package</description>
  <maintainer email="gkahn@todo.todo">gkahn</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>ite_grid</build_depend>
  <build_depend>ite_info</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>ite_grid</run_depend>
  <run_depend>ite_info</run_depend>
  <run_depend>message_runtime</run_depend>
  
  
</package>
