<?xml version="1.0"?>
<package>
  <name>octomap_multi</name>
  <version>0.0.0</version>
  <description>The octomap_multi package</description>

  <maintainer email="bcharrow@todo.todo">bcharrow</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>octomap</run_depend>
  <run_depend>octomap_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>   
</package>
